# worldcupmodel

./: .gitignore  CHANGELOG.md  CLAUDE.md  DECISIONS.md  Makefile  README.md  STATUS.md  pyproject.toml
config/: rivalries.yaml  settings.yaml  teams.yaml
data/: odds_snapshots.csv
data/manual/: anchors.csv  bracket_2026.yaml  historical_prop_lines.csv  lines.csv  results_patch.csv  third_place_allocation.csv
data/manual/sources/: eur24wc22_odds.rtf  eur24wc22_odds.txt
docs/: AUDIT.md  BACKLOG.md  DATA.md  MODEL.md  PLAN.md  PLAYBOOK.md
ledger/: bets.csv
src/wc26/: __init__.py  cli.py  config.py
src/wc26/backtest/: __init__.py  baselines.py  harness.py  market_anchor.py  metrics.py  prop_lines.py  props.py  wc_offset.py
src/wc26/data/: __init__.py  elo.py  espn.py  historical_prop_lines.py  manual.py  market_odds.py  odds_api.py  results.py  sync.py  teams.py
src/wc26/markets/: __init__.py  anchors.py  edges.py  ledger.py  lines.py  odds.py
src/wc26/sim/: mc.py  (+5 more)
tests/: test_anchors.py  test_backtest.py  test_bracket.py  test_corners_cards.py  test_espn.py  test_gates.py  test_goal_engine.py  test_ko_facts.py  test_ledger.py  test_lines_edges.py  test_manual.py  test_market_anchor.py  test_market_odds.py  test_negbin.py  test_odds.py  test_odds_api.py  test_prop_features.py  test_prop_gates.py  test_prop_lines.py  test_results_elo.py  test_sim_gates.py  test_smoke.py  test_snapshots.py  test_standings.py  test_sync.py  test_team_totals.py  test_teams.py  test_wc_offset.py
tests/fixtures/: betexplorer_fragment.html  patch_mini.csv  results_mini.csv
(+8 files in other folders)
